// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a NavLink 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
  cursor: default;
}

<NavLink
  disabled={true}
  external={true}
  to="foobar"
>
  <a
    className="emotion-0 emotion-1"
  />
</NavLink>
`;

exports[`renders a custom arrowIcon 1`] = `
<div>
  0
</div>
`;

exports[`renders a default NavLink 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<NavLink
  to="foobar"
>
  <ForwardRef(render)>
    <NavLink
      activeClassName="css-c5kiin-primaryFontFamily-bold"
      className="emotion-0 emotion-1"
      exact={true}
      to="foobar"
    >
      <Link
        aria-current={null}
        className="emotion-0 emotion-1"
        to={
          Object {
            "hash": "",
            "pathname": "/foobar",
            "search": "",
            "state": null,
          }
        }
      >
        <LinkAnchor
          aria-current={null}
          className="emotion-0 emotion-1"
          href="/foobar"
          navigate={[Function]}
        >
          <a
            aria-current={null}
            className="emotion-0 emotion-1"
            href="/foobar"
            onClick={[Function]}
          />
        </LinkAnchor>
      </Link>
    </NavLink>
  </ForwardRef(render)>
</NavLink>
`;

exports[`renders the expected markup 1`] = `
.emotion-55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: bold;
}

.emotion-15 {
  padding-left: 10px;
  padding-right: 10px;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
}

.emotion-11 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
}

.emotion-45 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
  cursor: default;
}

.emotion-53 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: bold;
}

<Breadcrumb
  items={
    Array [
      Object {
        "arrowIcon": "angle_double_right",
        "label": "Project Name 13",
        "path": "/",
      },
      Object {
        "label": "SEARCH",
        "path": "/search",
        "tooltip": "project AND name",
      },
      Object {
        "label": "REVIEW",
        "path": "/search/review",
      },
      Object {
        "disabled": true,
        "label": "ANALYZE",
        "path": "/search/review/analyze",
      },
      Object {
        "emphasized": true,
        "external": true,
        "label": "SHARE",
        "path": "/search/review/analyze/share",
      },
    ]
  }
>
  <ul
    className="emotion-55 emotion-56"
  >
    <NavLink
      disabled={false}
      emphasized={false}
      external={false}
      key=".0"
      to="/"
    >
      <ForwardRef(render)>
        <NavLink
          activeClassName="emotion-2"
          className="emotion-0 emotion-1"
          exact={true}
          to="/"
        >
          <Link
            aria-current="page"
            className="emotion-0 emotion-1 emotion-2"
            style={Object {}}
            to={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current="page"
              className="emotion-0 emotion-1 emotion-2"
              href="/"
              navigate={[Function]}
              style={Object {}}
            >
              <a
                aria-current="page"
                className="emotion-0 emotion-1 emotion-2"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                Project Name 13
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </ForwardRef(render)>
    </NavLink>
    <Arrow
      key=".1"
    >
      <div
        className="emotion-15 emotion-16"
      >
        <Icon
          name="angle_double_right"
          squared={true}
        >
          <ForwardRef
            className="emotion-11 emotion-12"
            name="angle_double_right"
            squared={true}
          >
            <i
              className="emotion-11 emotion-12"
            >
              angle_double_right
            </i>
          </ForwardRef>
        </Icon>
      </div>
    </Arrow>
    <NavLink
      disabled={false}
      emphasized={false}
      external={false}
      key=".2"
      to="/search"
    >
      <ForwardRef(render)>
        <NavLink
          activeClassName="emotion-2"
          className="emotion-0 emotion-1"
          exact={true}
          to="/search"
        >
          <Link
            aria-current={null}
            className="emotion-0 emotion-1"
            to={
              Object {
                "hash": "",
                "pathname": "/search",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="emotion-0 emotion-1"
              href="/search"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="emotion-0 emotion-1"
                href="/search"
                onClick={[Function]}
              >
                <span
                  id="breadcrumb-1-tooltip"
                  title="project AND name"
                >
                  SEARCH
                </span>
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </ForwardRef(render)>
    </NavLink>
    <Arrow
      key=".3"
    >
      <div
        className="emotion-15 emotion-16"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <ForwardRef
            className="emotion-11 emotion-12"
            name="angle_right"
            squared={true}
          >
            <i
              className="emotion-11 emotion-12"
            >
              angle_right
            </i>
          </ForwardRef>
        </Icon>
      </div>
    </Arrow>
    <NavLink
      disabled={false}
      emphasized={false}
      external={false}
      key=".4"
      to="/search/review"
    >
      <ForwardRef(render)>
        <NavLink
          activeClassName="emotion-2"
          className="emotion-0 emotion-1"
          exact={true}
          to="/search/review"
        >
          <Link
            aria-current={null}
            className="emotion-0 emotion-1"
            to={
              Object {
                "hash": "",
                "pathname": "/search/review",
                "search": "",
                "state": null,
              }
            }
          >
            <LinkAnchor
              aria-current={null}
              className="emotion-0 emotion-1"
              href="/search/review"
              navigate={[Function]}
            >
              <a
                aria-current={null}
                className="emotion-0 emotion-1"
                href="/search/review"
                onClick={[Function]}
              >
                REVIEW
              </a>
            </LinkAnchor>
          </Link>
        </NavLink>
      </ForwardRef(render)>
    </NavLink>
    <Arrow
      key=".5"
    >
      <div
        className="emotion-15 emotion-16"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <ForwardRef
            className="emotion-11 emotion-12"
            name="angle_right"
            squared={true}
          >
            <i
              className="emotion-11 emotion-12"
            >
              angle_right
            </i>
          </ForwardRef>
        </Icon>
      </div>
    </Arrow>
    <NavLink
      disabled={true}
      emphasized={false}
      external={false}
      key=".6"
      to="/search/review/analyze"
    >
      <a
        className="emotion-45 emotion-1"
      >
        ANALYZE
      </a>
    </NavLink>
    <Arrow
      key=".7"
    >
      <div
        className="emotion-15 emotion-16"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <ForwardRef
            className="emotion-11 emotion-12"
            name="angle_right"
            squared={true}
          >
            <i
              className="emotion-11 emotion-12"
            >
              angle_right
            </i>
          </ForwardRef>
        </Icon>
      </div>
    </Arrow>
    <NavLink
      disabled={false}
      emphasized={true}
      external={true}
      key=".8"
      to="/search/review/analyze/share"
    >
      <a
        className="emotion-53 emotion-1"
        href="/search/review/analyze/share"
      >
        SHARE
      </a>
    </NavLink>
  </ul>
</Breadcrumb>
`;
